(fix|COS-2113): Fix calendar z-index (fix|COS-2107): Invoice notes not persisted

--- a/packages/apps/spaces/styles/date-picker.scss
+++ b/packages/apps/spaces/styles/date-picker.scss
@@ -161,7 +161,7 @@
 .react-date-picker__calendar {
   width: 350px;
   max-width: 100vw;
-  z-index: 1;
+  z-index: 50;
   inset: 120% 0px auto auto !important;
 }
 
